--- a/testui.glade
+++ b/testui.glade
@@ -36,7 +36,7 @@
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="max_length">1</property>
-            <signal name="changed" handler="on_insert_text" object="lbl" swapped="no"/>
+            <signal name="changed" handler="on_insert_text" swapped="no"/>
           </object>
           <packing>
             <property name="expand">False</property>
@@ -103,6 +103,28 @@
             <property name="fill">True</property>
             <property name="position">3</property>
           </packing>
+        </child>
+      </object>
+    </child>
+  </object>
+  <object class="GtkWindow" id="result_window">
+    <property name="can_focus">False</property>
+    <child type="titlebar">
+      <placeholder/>
+    </child>
+    <child>
+      <object class="GtkBox">
+        <property name="visible">True</property>
+        <property name="can_focus">False</property>
+        <property name="orientation">vertical</property>
+        <child>
+          <placeholder/>
+        </child>
+        <child>
+          <placeholder/>
+        </child>
+        <child>
+          <placeholder/>
         </child>
       </object>
     </child>
